--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,12 @@
 ###> symfony/asset-mapper ###
 /public/assets/
 /assets/vendor/
+/public/images/upload/*
 ###< symfony/asset-mapper ###
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-/public/build/
+# /public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
